envoy-extension/ext_proc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  labels:
    app: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: grpc-server
        image: us-docker.pkg.dev/kaushikmitra-gke-dev/kaushikmitra-docker-repo/grpc-vllm-lora-go-1:latest
        args:
        - -pods
        - "vllm-6679456895-2v5b8,vllm-6679456895-dfg8k,vllm-6679456895-mwxh9"
        - -podIPs
        - "10.8.2.192:8000,10.8.0.92:8000,10.8.3.183:8000" 
        ports:
        - containerPort: 9002
      - name: curl
        image: curlimages/curl
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: LoadBalancer
