envoy-extension/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
  namespace: default
spec:
  parentRefs:
  - name: genai-inference-gateway
  rules:
  - backendRefs:
    - name: vllm-lora
      port: 8000
      kind: Service
    timeouts:
      request: "1000s"
      backendRequest: "1000s"
